--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,16 +1,28 @@
 <ion-view view-title="Chats">
+
+
+
+<ion-nav-buttons side="primary">
+<button class="button" ng-Click="getAll()"> Recarga </button>
+ </ion-nav-buttons>
+
+
+
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
+     <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+       <!-- <img ng-src="{{chat.face}}"> -->
+        <h2>{{chat.nombre}}</h2>
+        <p>{{chat.apellido}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
+      <!--  <ion-option-button class="button-assertive" ng-click="remove(chat); getAll();"> -->
+      <ion-option-button class="button-assertive" ng-click="remove(chat);">
           Delete
         </ion-option-button>
       </ion-item>
+     
     </ion-list>
+     <p>{{ statusMessage }}</p>
   </ion-content>
 </ion-view>
