--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,19 @@
-<ion-view view-title="Account">
+<ion-view view-title="Datos del video club">
   <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
+
+<label class="item item-input">
+            <span class="input-label">Nombre del video club</span>
+             <span class="input-label">Android cine</span>
+        </label>
+        <label class="item item-input">
+            <span class="input-label">Direccion</span>
+            <span class="input-label">Cerretera Lauro VIllar km 6.5</span>
+        </label>
+        <label class="item item-input">
+            <span class="input-label">Telefono</span>
+            <span class="input-label">8-12-39-80</span>
+        </label>
+
   </ion-content>
+  
 </ion-view>
