--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Agregar contacto">
+<ion-view view-title="Agregar pelicula">
   <ion-content class="padding">
   
     <form name="form1" novalidate>
